# homework_1

./: README.md
.github/workflows/: workflow_1.yml
src/: CMakeLists.txt  homework1.cpp  homework1_test.cpp  homework1_version.cpp  homework_1.cpp  version_config.in
